[package]
name = "my_library"
version = "0.1.1"
edition = "2021"

[[bench]]
name = "random"
harness = false

[dependencies]
bevy = "0.14.1"
rand = "0.8.5"
rand_pcg = { version = "0.3.1", optional = true }
rand_xorshift = { version = "0.3.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = [ "html_reports" ] }

[features]
default = [ "pcg" ]
pcg = [ "rand_pcg" ]
xorshift = [ "rand_xorshift" ]
locking = []
